src/objects/SPE_ScoreCard__c.object
<CustomObject>
    <fields>
        <fullName>AggregationRule__c</fullName>
        <label>Aggregation Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AggregationType__c</fullName>
        <label>Aggregation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average by Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>same by volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules Driven Averaging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aggregation_Duration__c</fullName>
        <label>Aggregation Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregation_Period__c</fullName>
        <formula>TEXT( ScorecardTracker__r.ScorecardGenerator__r.Aggregation_Period_Adhoc__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregation Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Algorithm__c</fullName>
        <label>Algorithm</label>
        <picklist>
            <picklistValues>
                <fullName>Simple Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average By Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weighted Average By Units</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <formula>IF((! ScorecardTracker__r.ScorecardGenerator__r.IsAutoApproved__c =False),&apos;Auto Approval&apos;,&apos;Manual Approval&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApproverEmail__c</fullName>
        <formula>Approver__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Title__c</fullName>
        <label>Approver Title</label>
        <picklist>
            <picklistValues>
                <fullName>Category Manager (CM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Procurement Manager (PPM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Manager (SM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Quality Manager (SQM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ScoreCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <controllingField>BusinessUnit__c</controllingField>
            <picklistValues>
                <fullName>All Business Line</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3G CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGGREGATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTENNA LINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SUPPORT SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA/LTE RADIO ACCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM AND OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARGING, BILLING &amp; CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUSTOMER INSIGHT &amp; EXPERIENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENGINEERING &amp; PRODUCTIVITY (EP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSM RADIO ACCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUID CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LONG TERM BUSINESS SUPPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE RADIO ACCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANAGED SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA AND ENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MICROWAVE TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTIRADIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION - ANCILLARY/IMPLEMENTATION MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION - CONSTRUCTION MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION - OUTSIDE PLANT MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION - SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK PLANNING AND OPTIMIZATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPERATION SUPPORT SOLUTIONS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>All Business Unit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCContact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Contact1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ScoreCards (CC Contact1)</relationshipLabel>
        <relationshipName>ScoreCards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCContact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ScoreCards (CC Contact2)</relationshipLabel>
        <relationshipName>ScoreCards2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCContact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Contact3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ScoreCards (CC Contact3)</relationshipLabel>
        <relationshipName>ScoreCards3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>All Category Area</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <controllingField>CategoryCluster__c</controllingField>
            <picklistValues>
                <fullName>All Category Group</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL &amp; FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING AND MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC MANUFACTURING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS &amp; RF PRODUCTSMECHANICS &amp; RF PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF &amp; CUSTOM COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEMS AND EMBEDDED POWER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL WORKFORCE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING MS, NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING NI SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW &amp; CARE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOFTWARE SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPAIR &amp; SPARES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASESTATION ANTENNAS &amp; ECOSYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNERING OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESEARCH &amp; DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPENDITURES REPORTED ERRONEOUSLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-MANAGED EXPENDITURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PROCUREMENT &amp; TELECOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS INCUBATION &amp; E2E SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW &amp; SW SOLUTIONS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>CategoryGroup__c</controllingField>
            <picklistValues>
                <fullName>All Category</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWS INBOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWS TRANSPORTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWS WAREHOUSING AND VALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM DROP OFF POINT (LOCAL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM INBOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM LAST MILE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM OUTBOUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM VALUE ADDED LOGISTICS SERVICES ***CAT TO BE DELETED***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM WAREHOUSING (GLOBAL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORPORATE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKETING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT SOFTWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT INFRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT SUBCONTRACTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC &amp; IT PERIPHERAL DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOICE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING AND MANUFACTURING EQUIPMENT (TME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT ASSIGNED SPEND (CATEGORY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPORTED IN SPCS (CATEGORY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTENNAS ECOSYSTEM &amp; COMPLEMENTARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASESTATION ANTENNAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN BUILDING SOLUTIONS (IBS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPT ECOSYSTEM &amp; COMPLEMENTARY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ScoreCards</relationshipLabel>
        <relationshipName>ScoreCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>SubRegion__c</controllingField>
            <picklistValues>
                <fullName>All CO Country</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hongkong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Fed.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DisplaySpend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Spend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayUnits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribute_Scorecard__c</fullName>
        <label>Distribute Scorecard</label>
        <picklist>
            <picklistValues>
                <fullName>PENDING DISTRIBUTION</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DISTRIBUTED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnterpriseIDDeprecated_DoNotUse__c</fullName>
        <formula>&apos;True&apos;</formula>
        <label>Enterprise ID DeprecatedDoNotUse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAdhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAdhoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nego_Responsible__c</fullName>
        <label>Nego Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <picklist>
            <controllingField>BusinessLine__c</controllingField>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA Blade Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA Embedded Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATCA HW Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browsing Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPX5000 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit Switched Data Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Gateway @vantage CPG-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3300 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Packet Router @vantage CPR-3300 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAXnode 5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 200 RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX 220 Compact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DX MSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DXT SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <picklist>
            <controllingField>BusinessLine__c</controllingField>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-2100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES A-8100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-SERIES SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1180 MP SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1180 TM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1200-x SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-1210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-210 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-2140 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-2200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Series A-4100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1180 MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1180 TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1200-x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-1210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-2140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-4100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-8100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-series A-8100 (old)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <picklist>
            <controllingField>BusinessLine__c</controllingField>
            <picklistValues>
                <fullName>All Product</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIG1100 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR 220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR200 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURPASS HIR200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER OEM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH COMMANDER SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDM SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WINDISKUS SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE 9200 S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 CCGE HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 CP113E HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 LTGP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 MBD HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 MCP HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 PM HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SND HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SSNC HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 STMI HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIE9200 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600 HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1600 SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIG 1800 HW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>